[project]
name = "yieldgraph"
version = "0.3.1"
description = "A lightweight Python library for building interruptible, generator-driven ETL pipelines as directed graphs."
authors = [
    {name = "j4ggr", email = "reto@jaeggli.email"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/j4ggr/yieldgraph"
Documentation = "https://j4ggr.github.io/yieldgraph/"
Changelog = "https://j4ggr.github.io/yieldgraph/CHANGELOG/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
test = [
    "pytest>=9.0.3",
]
doc = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-material>=9.7.6",
    "ruff>=0.15.12",
]
